# gmail-organiser

./: .gitignore  LICENSE  README.md  auth.py  gmail_analyzer.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  tui.py
